feat: extract more as variables + point player to hallway at start

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<title>Bangle emulator</title>
 	<script src="main.js"></script>
 </head>
-<body>
-<canvas id="canvas" width="240" height="160"></canvas>
-<canvas id="canvas-debug" width="281" height="241"></canvas>
+<body style="overflow: hidden;">
+<canvas id="canvas" style="border: 5px solid #DDD;"></canvas>
+<br/>
+<canvas id="canvas-debug"></canvas>
 </body>
 </html>
