--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Bangle emulator</title>
 	<script src="main.js"></script>
+<!--	<script src="main.minified.js"></script>-->
 </head>
 <body style="overflow: hidden;">
 <canvas id="canvas" style="border: 5px solid #DDD;"></canvas>
