feat: implement bangle screen io and add webpack build

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bangle emulator</title>
-	<script src="main.js"></script>
-<!--	<script src="main.minified.js"></script>-->
+	<script src="dist/desktop.js"></script>
 </head>
 <body style="overflow: hidden;">
 <canvas id="canvas" style="border: 5px solid #DDD;"></canvas>
